--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 
         <!-- Add your site or application content here -->
         <div class="container">
-            <canvas id="clock" width="600" height="600"></canvas>
-
-            <canvas id="stockGraph" width="150" height="150">
-</canvas>
+            <canvas id="clockHandsLayer" width="600" height="600" style="background-color: transparent; position: relative; z-index: 2;"></canvas>
+            <canvas id="clockFaceLayer" width="600" height="600" style="background-color: transparent; position: absolute; top: 0; left: 0;"></canvas>
         </div>
 
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
