Getting the elements more size independent.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <body>
     
         <!-- Add your site or application content here -->
-        <div class="container">
-            <canvas id="clockHandsLayer" width="600" height="600" style="background-color: transparent; position: relative; z-index: 2;"></canvas>
-            <canvas id="clockFaceLayer" width="600" height="600" style="background-color: transparent; position: absolute; top: 0; left: 0;"></canvas>
-        </div>
+        <div class="analog-clock-container" data-clock-size="600"></div>
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
